--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/vim.symlink/bundle/vundle"]
 	path = vim/vim.symlink/bundle/vundle
 	url = git://github.com/gmarik/vundle.git
+[submodule "vim/vim.symlink/snippets"]
+	path = vim/vim.symlink/snippets
+	url = git://github.com/spf13/snipmate-snippets.git
