lots of cleanup

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,15 @@
-set -g history-limit 50000
+set -g utf8
+set-window-option -g utf8 on
+
+source /Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf
 set -g default-terminal "screen-256color"
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+set -g history-limit 50000
 
 # C-b is not acceptable -- Vim uses it
 set -g prefix C-s
 unbind C-b
 bind C-s send-prefix
-
-# Bind a to go to beginning of line (ctrl-a expected behaviour)
-#bind a send-prefix
-
-# Make mouse useful in copy mode
-setw -g mode-mouse on
-
-# Allow mouse to select which pane to use
-set -g mouse-select-pane on
 
 # Start numbering at 1
 set -g base-index 1
@@ -37,6 +32,9 @@ set-window-option -g window-status-current-bg red
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Fix pbcopy/pbpaste
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
@@ -55,23 +53,74 @@ bind k select-pane -U
 unbind l
 bind l select-pane -R
 
-# Copy mode works as Vim
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-
-# reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-
 # auto window rename
 set-window-option -g automatic-rename
 
 # auto renumber window
 set-option -g renumber-windows on
 
-# Fix pbcopy/pbpaste
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind C-l send-keys 'C-l'
+bind C-k send-keys 'C-k'
+
+############################################################################
+# Mouse
+############################################################################
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+# Toggle mouse on with prefix m
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
+
+# Toggle mouse off with prefix M
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
+
+############################################################################
+# Unbindings
+############################################################################
+unbind j
+unbind C-b # unbind default leader key
+unbind '"' # unbind horizontal split
+unbind %   # unbind vertical split
+unbind [ # Copy mode works as Vim
+unbind p
+
+############################################################################
+# Bindings
+############################################################################
+bind Escape copy-mode
+bind p paste-buffer
+
+# reload tmux conf
+bind-key r source-file ~/.tmux.conf
+
+#bind Escape copy-mode
+
+# new split in current pane (horizontal / vertical)
+bind-key - split-window -v # split pane horizontally
+bind-key \ split-window -h # split pane vertically
+
+# list panes
+bind-key Space list-panes
+
+# break-pane
+#bind-key Enter break-pane
