--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,5 +1,34 @@
 [character]
 symbol = "➜"
 
+[cmd_duration]
+min_time = 10
+
+[directory]
+truncation_length = 8
+truncate_to_repo = false
+
+[docker_context]
+symbol = "🐋 "
+disabled = false
+
+[git_commit]
+only_detached = false
+
+[kubernetes]
+disabled = false
+symbol = "☸  "
+[kubernetes.context_aliases]
+"insc1-aks-prod" = "AKS Scen1 Prod"
+"insc1-aks-prod-admin" = "AKS Scen1 Prod ADMIN"
+"insc1-aks-tools" = "AKS Scen1 Tools"
+"insc1-aks-tools-admin" = "AKS Scen1 Tools ADMIN"
+"ine2-aks-prod" = "AKS EastUS2 Prod"
+"ine2-aks-prod-admin" = "AKS EastUS2 Prod ADMIN"
+"ine2-aks-tools" = "AKS EastUS2 Tools"
+"ine2-aks-tools-admin" = "AKS EastUS2 Tools ADMIN"
+"dve2-aks-nonprod-admin" = "AKS NonProd ADMIN"
+
 [time]
 disabled = false
+
